--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,12 +1,16 @@
-FROM mysql
+FROM mariadb
 
 # setting root password
 ENV MYSQL_ROOT_PASSWORD root
 
-#ENV MYSQL_DATABASE=sampledb
-ENV MYSQL_USER=sample-username
-ENV MYSQL_PASSWORD=sapassword
+# setting user and password
+ENV MYSQL_USER=audiogene
+ENV MYSQL_PASSWORD=cakephp
 
+# naming the database
 ENV MYSQL_DATABASE=audiogene_collection
+
+# initalized database from script
+COPY setup.sql /docker-entrypoint-initdb.d/
 
 
