working docker-compose in this directory

--- a/apache/site.conf
+++ b/apache/site.conf
@@ -1,5 +1,8 @@
 <VirtualHost *:3000>
-    DocumentRoot /var/www/html/audiogene_collection/
+    DocumentRoot /var/www/html/
+            <IfModule mod_dir.c>
+      DirectoryIndex index.php
+            </IfModule>
 
     <Directory /var/www/html/>
         Options FollowSymLinks
